# stream-truth-layer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
demo/: index.html
docs/: production-architecture.md
docs/adr/: 0001-when-flink.md
docs/superpowers/plans/: 2026-06-27-stream-truth-layer.md
docs/superpowers/specs/: 2026-06-27-stream-truth-layer-design.md
stl/: checkpoint.py  cli.py  event.py  explain.py  metrics.py  observe.py  seeds.py  sink.py  source.py  state.py  watermark.py  window.py
stl/data/: shows.jsonl  shows_late.jsonl
stl/pipelines/: batch.py  common.py  event_time.py  naive.py  reconcile.py  recovery.py
tests/: test_cli.py  test_event.py  test_explain.py  test_metrics.py  test_pipelines.py  test_reconcile.py  test_recovery.py  test_seeds.py  test_sink.py  test_source.py  test_state.py  test_watermark.py  test_window.py
