[project]
name = "stream-truth-layer"
version = "0.1.0"
description = "A pure-Python mini-Flink streaming engine for Whatnot live auctions"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.5", "typer>=0.12", "duckdb>=0.10"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
stl = "stl.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["stl*"]

[tool.setuptools.package-data]
stl = ["data/*.jsonl"]
